--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <ul>
         <li><a href="https://github.com/kacox/titanicml">Home</a></li>
         <li><a href="Titanic_investigate.html">Investigate a Dataset</a></li>
-        <li><a href="Titanic_ML.html">Machine Learning Addendum</a></li>
+        <li><a href="titanic-solution.html">Machine Learning Addendum</a></li>
     </ul>
 
     <p id="main_p">
