--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="description" value="">
     <meta name="keywords" value="">
-    <title>Titanic: Machine Learning from Disaster - Kasey Cox</title>
+    <title>Titanic: Machine Learning from Disaster - RIDDY MAZUMDER</title>
 
     <style>
         ul {
@@ -47,7 +47,7 @@
 
 <body>
     <ul>
-        <li><a href="https://github.com/kacox/titanicml">Home</a></li>
+        <li><a https://github.com/RiddyMazumder/Titanic-Machine-Learning-from-Disaster>Home</a></li>
         <li><a href="Titanic_investigate.html">Investigate a Dataset</a></li>
         <li><a href="titanic-solution.html">Machine Learning Addendum</a></li>
     </ul>
