--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 <body>
     <ul>
-        <li><a https://github.com/RiddyMazumder/Titanic-Machine-Learning-from-Disaster>Home</a></li>
-        <li><a href="Titanic_investigate.html">Investigate a Dataset</a></li>
-        <li><a href="titanic-solution.html">Machine Learning Addendum</a></li>
+        <li><a href="https://github.com/RiddyMazumder/Titanic-Machine-Learning-from-Disaster">GitHub Rpo</a></li>
+        <li><a href="README.html">README</a></li>
+        <li><a href="titanic-solution.html">Titanic-Machine-Learning-from-Disaster-Solution</a></li>
     </ul>
 
     <p id="main_p">
